--- a/_data/tag/brainvision.yml
+++ b/_data/tag/brainvision.yml
@@ -4,3 +4,9 @@
 - name:  Getting started with BrainVision Analyzer and Easycap
   link:  /getting_started/brainvision
 
+- name:  Preprocessing - Reading continuous EEG and MEG data
+  link:  /tutorial/continuous
+
+- name:  Preprocessing of EEG data and computing ERPs
+  link:  /tutorial/preprocessing_erp
+
