--- a/_data/tag/ct.yml
+++ b/_data/tag/ct.yml
@@ -85,6 +85,9 @@
 - name:  What kind of filters can I apply to my data?
   link:  /faq/what_kind_of_filters_can_i_apply_to_my_data
 
+- name:  Which datasets are used in the documentation and where are they used?
+  link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
+
 - name:  Why are so many of the interesting functions in the private directories?
   link:  /faq/why_are_so_many_of_the_interesting_functions_in_the_private_directories
 
@@ -109,17 +112,29 @@
 - name:  Automatic artifact rejection
   link:  /tutorial/automatic_artifact_rejection
 
+- name:  Analysis of corticomuscular coherence
+  link:  /tutorial/coherence
+
+- name:  Extended analysis of sensor- and source-level connectivity
+  link:  /tutorial/connectivityextended
+
 - name:  Analysis of sensor- and source-level connectivity
   link:  /tutorial/connectivity
 
 - name:  Localizing electrodes using a 3D-scanner
   link:  /tutorial/electrode
 
+- name:  Analysis of human ECoG and sEEG recordings
+  link:  /tutorial/human_ecog
+
 - name:  Whole brain connectivity and network analysis
   link:  /tutorial/networkanalysis
 
 - name:  Whole brain connectivity and network analysis
   link:  /tutorial/networkanalysis_old
+
+- name:  Preprocessing of EEG data and computing ERPs
+  link:  /tutorial/preprocessing_erp
 
 - name:  Extracting the brain state and events from continuous sleep EEG
   link:  /tutorial/sleep
