--- a/_data/tag/granger.yml
+++ b/_data/tag/granger.yml
@@ -1,3 +1,6 @@
+- name:  Extended analysis of sensor- and source-level connectivity
+  link:  /tutorial/connectivityextended
+
 - name:  Analysis of sensor- and source-level connectivity
   link:  /tutorial/connectivity
 
