--- a/_data/tag/ieeg.yml
+++ b/_data/tag/ieeg.yml
@@ -7,6 +7,9 @@
 - name:  Human ECoG
   link:  /getting_started/human_ecog
 
+- name:  Analysis of human ECoG and sEEG recordings
+  link:  /tutorial/human_ecog
+
 - name:  Analysis of monkey ECoG recordings
   link:  /tutorial/monkey_ecog
 
