--- a/_data/tag/matlab.yml
+++ b/_data/tag/matlab.yml
@@ -49,6 +49,9 @@
 - name:  Speeding up your analysis with distributed computing
   link:  /tutorial/distributedcomputing
 
+- name:  Introduction to the FieldTrip toolbox
+  link:  /tutorial/introduction
+
 - name:  Making a memory efficient analysis script
   link:  /tutorial/memory
 
