--- a/_data/tag/meg-language.yml
+++ b/_data/tag/meg-language.yml
@@ -1,3 +1,6 @@
+- name:  Which datasets are used in the documentation and where are they used?
+  link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
+
 - name:  Localizing oscillatory sources using beamformer techniques
   link:  /tutorial/beamformer
 
@@ -6,6 +9,9 @@
 
 - name:  Cluster-based permutation tests on event related fields
   link:  /tutorial/cluster_permutation_timelock
+
+- name:  Preprocessing - Reading continuous EEG and MEG data
+  link:  /tutorial/continuous
 
 - name:  Speeding up your analysis with distributed computing
   link:  /tutorial/distributedcomputing
