--- a/_data/tag/multivariate.yml
+++ b/_data/tag/multivariate.yml
@@ -1,3 +1,6 @@
+- name:  Multivariate analysis of electrophysiological data
+  link:  /tutorial/multivariateanalysis
+
 - name:  Classification of event related MEG data using MVPA-Light
   link:  /tutorial/mvpa_light
 
