--- a/_data/tag/trialfun.yml
+++ b/_data/tag/trialfun.yml
@@ -19,6 +19,9 @@
 - name:  What is the relation between "events" (such as triggers) and "trials"?
   link:  /faq/what_is_the_relation_between_events_such_as_triggers_and_trials
 
+- name:  Preprocessing of EEG data and computing ERPs
+  link:  /tutorial/preprocessing_erp
+
 - name:  FieldTrip Walkthrough
   link:  /walkthrough
 
