--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -1,3 +1,6 @@
+- name:  Which datasets are used in the documentation and where are they used?
+  link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
+
 - name:  Getting started with real-time analysis for BCI/neurofeedback
   link:  /getting_started/realtime
 
@@ -19,8 +22,17 @@
 - name:  Cluster-based permutation tests on event related fields
   link:  /tutorial/cluster_permutation_timelock
 
+- name:  Analysis of corticomuscular coherence
+  link:  /tutorial/coherence
+
+- name:  Extended analysis of sensor- and source-level connectivity
+  link:  /tutorial/connectivityextended
+
 - name:  Analysis of sensor- and source-level connectivity
   link:  /tutorial/connectivity
+
+- name:  Preprocessing - Reading continuous EEG and MEG data
+  link:  /tutorial/continuous
 
 - name:  Speeding up your analysis with distributed computing
   link:  /tutorial/distributedcomputing
@@ -46,6 +58,12 @@
 - name:  Creating a volume conduction model of the head for source-reconstruction of MEG data
   link:  /tutorial/headmodel_meg
 
+- name:  Analysis of human ECoG and sEEG recordings
+  link:  /tutorial/human_ecog
+
+- name:  Introduction to the FieldTrip toolbox
+  link:  /tutorial/introduction
+
 - name:  Specifying the channel layout for plotting
   link:  /tutorial/layout
 
@@ -61,6 +79,9 @@
 - name:  Analysis of monkey ECoG recordings
   link:  /tutorial/monkey_ecog
 
+- name:  Multivariate analysis of electrophysiological data
+  link:  /tutorial/multivariateanalysis
+
 - name:  Classification of event related MEG data using MVPA-Light
   link:  /tutorial/mvpa_light
 
@@ -75,6 +96,9 @@
 
 - name:  Preprocessing and averaging of single-channel NIRS data
   link:  /tutorial/nirs_singlechannel
+
+- name:  Preprocessing of EEG data and computing ERPs
+  link:  /tutorial/preprocessing_erp
 
 - name:  Trigger-based trial selection
   link:  /tutorial/preprocessing
