--- a/_data/tag/development.yml
+++ b/_data/tag/development.yml
@@ -19,7 +19,7 @@
 - name:  Code guidelines
   link:  /development/guideline/code
 
-- name:  Documentation guidelines
+- name:  Documentation guidelines this is the title, it should also be the first top-level heading
   link:  /development/guideline/documentation
 
 - name:  Template guidelines
