--- a/_data/tag/guidelines.yml
+++ b/_data/tag/guidelines.yml
@@ -4,7 +4,7 @@
 - name:  Code guidelines
   link:  /development/guideline/code
 
-- name:  Documentation guidelines
+- name:  Documentation guidelines this is the title, it should also be the first top-level heading
   link:  /development/guideline/documentation
 
 - name:  Template guidelines
