--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -205,7 +205,7 @@
 - name:  How to test an interaction effect using cluster-based permutation tests?
   link:  /faq/how_can_i_test_an_interaction_effect_using_cluster-based_permutation_tests
 
-- name:  How can I test for correlations between neuronal data and quantitative stimulus and behavioural variables?
+- name:  How can I test for correlations between neuronal data and quantitative stimulus and behavioral variables?
   link:  /faq/how_can_i_test_for_correlations_between_neuronal_data_and_quantitative_stimulus_and_behavioural_variables
 
 - name:  What kind of cable do I need for a serial port connection between two computers?
