--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -106,7 +106,7 @@
 - name:  How can I compile the mex files on 64 bit Windows?
   link:  /faq/how_can_i_compile_the_mex_files_on_64_bit_windows
 
-- name:  How can I compile the mex files on OS X?
+- name:  How can I compile the mex files on macOS?
   link:  /faq/how_can_i_compile_the_mex_files_on_os_x
 
 - name:  How can I consistently represent artifacts in my data?
