--- a/_data/tag/mex.yml
+++ b/_data/tag/mex.yml
@@ -7,7 +7,7 @@
 - name:  How can I compile the mex files on 64 bit Windows?
   link:  /faq/how_can_i_compile_the_mex_files_on_64_bit_windows
 
-- name:  How can I compile the mex files on OS X?
+- name:  How can I compile the mex files on macOS?
   link:  /faq/how_can_i_compile_the_mex_files_on_os_x
 
 - name:  MATLAB complains about a missing or invalid MEX file, what should I do?
