--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -364,7 +364,7 @@
 - name:  MATLAB complains about a missing or invalid MEX file, what should I do?
   link:  /faq/matlab_complains_about_a_missing_or_invalid_mex_file_what_should_i_do
 
-- name:  Replacements for functions from Mathworks toolboxes
+- name:  Replacements for functions from MathWorks toolboxes
   link:  /faq/matlab_replacements
 
 - name:  What are the MATLAB requirements for using FieldTrip?
