--- a/_data/tag/mex.yml
+++ b/_data/tag/mex.yml
@@ -4,7 +4,7 @@
 - name:  Can I use FieldTrip without MATLAB license?
   link:  /faq/compiled
 
-- name:  How can I compile the mex files on 64 bit Windows?
+- name:  How can I compile the mex files on 64-bit Windows?
   link:  /faq/how_can_i_compile_the_mex_files_on_64_bit_windows
 
 - name:  How can I compile the mex files on macOS?
