--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -34,7 +34,7 @@
 - name:  Can I compare EEG channels between different electrode caps?
   link:  /faq/capmapping
 
-- name:  How can I compile the mex files and command-line executables ?
+- name:  How can I compile the mex files and command-line executable?
   link:  /faq/compile
 
 - name:  Can I use FieldTrip without MATLAB license?
