--- a/_data/tag/source.yml
+++ b/_data/tag/source.yml
@@ -28,6 +28,9 @@
 - name:  Fit a dipole to the tactile ERF after mechanical stimulation
   link:  /example/fit_a_dipole_to_the_tactile_erf_after_mechanical_stimulation
 
+- name:  How to create a head model if you do not have an individual MRI
+  link:  /example/fittemplate
+
 - name:  How to import data from MNE-Python and FreeSurfer
   link:  /example/import_mne
 
