--- a/_data/tag/freq.yml
+++ b/_data/tag/freq.yml
@@ -109,6 +109,9 @@
 - name:  Sensor-level ERF, TFR and connectivity analyses
   link:  /tutorial/sensor_analysis
 
+- name:  Reading in data and performing sensor-level ERF and TFR analyses
+  link:  /tutorial/sensor_analysis_plusminus
+
 - name:  Time-frequency analysis using Hanning window, multitapers and wavelets
   link:  /tutorial/timefrequencyanalysis
 
