--- a/_data/tag/meg-visuomotor151.yml
+++ b/_data/tag/meg-visuomotor151.yml
@@ -10,3 +10,6 @@
 - name:  Sensor-level ERF, TFR and connectivity analyses
   link:  /tutorial/sensor_analysis
 
+- name:  Reading in data and performing sensor-level ERF and TFR analyses
+  link:  /tutorial/sensor_analysis_plusminus
+
