--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -142,7 +142,7 @@
 - name:  Preprocessing and event-related activity in combined MEG/EEG data
   link:  /workshop/natmeg/preprocessing
 
-- name:  Preprocessing and event-related activity in combined MEG/EEG data
+- name:  Statistical analysis and multiple comparison correction for combined MEG/EEG data
   link:  /workshop/natmeg/statistics
 
 - name:  Time-frequency analysis of combined MEG/EEG data
