--- a/_data/tag/dataset.yml
+++ b/_data/tag/dataset.yml
@@ -1,3 +1,6 @@
+- name:  Website syntax and formatting Event related averaging and MEG planar gradient
+  link:  /development/guideline/website
+
 - name:  How can I share my MEG data?
   link:  /faq/data_sharing
 
