--- a/_data/tag/development.yml
+++ b/_data/tag/development.yml
@@ -28,6 +28,9 @@
 - name:  Guidelines for audio and video material
   link:  /development/guideline/video
 
+- name:  Website syntax and formatting Event related averaging and MEG planar gradient
+  link:  /development/guideline/website
+
 - name:  Meetings
   link:  /development/meeting
 
