--- a/_data/tag/preprocessing.yml
+++ b/_data/tag/preprocessing.yml
@@ -1,3 +1,6 @@
+- name:  Website syntax and formatting Event related averaging and MEG planar gradient
+  link:  /development/guideline/website
+
 - name:  Detect the muscle activity in an EMG channel and use that as trial definition
   link:  /example/detect_the_muscle_activity_in_an_emg_channel_and_use_that_as_trial_definition
 
