--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -1,3 +1,6 @@
+- name:  Website syntax and formatting Event related averaging and MEG planar gradient
+  link:  /development/guideline/website
+
 - name:  Example script for leadfield based on FEM headmodel
   link:  /development/project/example_fem
 
