--- a/_data/tag/oslo2019.yml
+++ b/_data/tag/oslo2019.yml
@@ -1,3 +1,6 @@
+- name:  Website syntax and formatting Event related averaging and MEG planar gradient
+  link:  /development/guideline/website
+
 - name:  FieldTrip workshop in Oslo
   link:  /workshop/oslo2019
 
