--- a/_data/tag/anonymize.yml
+++ b/_data/tag/anonymize.yml
@@ -1,7 +1,7 @@
 - name:  Preparing an EEG dataset for sharing
   link:  /example/bids_eeg
 
-- name:  Preparing a combined MEG/fMRI dataset for sharing
+- name:  Preparing the combined MEG/fMRI MOUS dataset for sharing in BIDS
   link:  /example/bids_mous
 
 - name:  How can I anonymize or deidentify a CTF dataset?
