--- a/_data/tag/oslo2019.yml
+++ b/_data/tag/oslo2019.yml
@@ -7,3 +7,6 @@
 - name:  Preprocessing and event-related potentials in EEG data
   link:  /workshop/oslo2019/introduction
 
+- name:  Statistical analysis and multiple comparison correction for EEG data
+  link:  /workshop/oslo2019/statistics
+
