--- a/_data/tag/statistics.yml
+++ b/_data/tag/statistics.yml
@@ -67,3 +67,6 @@
 - name:  Statistical analysis and multiple comparison correction for combined MEG/EEG data
   link:  /workshop/natmeg/statistics
 
+- name:  Statistical analysis and multiple comparison correction for EEG data
+  link:  /workshop/oslo2019/statistics
+
