--- a/_data/tag/eeg-audodd.yml
+++ b/_data/tag/eeg-audodd.yml
@@ -1,6 +1,9 @@
 - name:  Website syntax and formatting Event related averaging and MEG planar gradient
   link:  /development/guideline/website
 
+- name:  Forward modeling for EEG source reconstruction
+  link:  /workshop/oslo2019/forward_modeling
+
 - name:  Preprocessing and event-related potentials in EEG data
   link:  /workshop/oslo2019/introduction
 
