--- a/_data/tag/oslo2019.yml
+++ b/_data/tag/oslo2019.yml
@@ -4,6 +4,9 @@
 - name:  FieldTrip workshop in Oslo
   link:  /workshop/oslo2019
 
+- name:  Forward modeling for EEG source reconstruction
+  link:  /workshop/oslo2019/forward_modeling
+
 - name:  Preprocessing and event-related potentials in EEG data
   link:  /workshop/oslo2019/introduction
 
