--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -163,7 +163,7 @@
 - name:  FieldTrip workshop in Madrid
   link:  /workshop/madrid2019
 
-- name:  Convert to BIDS
+- name:  Convert sedation EEG dataset to BIDS
   link:  /workshop/madrid2019/bids_sedation
 
 - name:  Details on the resting-state EEG dataset recorded with different sedation levels
