--- a/_data/tag/anonymize.yml
+++ b/_data/tag/anonymize.yml
@@ -1,7 +1,7 @@
-- name:  Preparing an EEG dataset for sharing
+- name:  Converting an example EEG dataset for sharing in BIDS
   link:  /example/bids_eeg
 
-- name:  Preparing the combined MEG/fMRI MOUS dataset for sharing in BIDS
+- name:  Converting the combined MEG/fMRI MOUS dataset for sharing in BIDS
   link:  /example/bids_mous
 
 - name:  How can I anonymize or deidentify a CTF dataset?
