--- a/_data/tag/bids.yml
+++ b/_data/tag/bids.yml
@@ -1,15 +1,15 @@
 - name:  BIDS - the brain imaging data structure
   link:  /example/bids
 
-- name:  Preparing an EEG dataset for sharing
+- name:  Converting an example EEG dataset for sharing in BIDS
   link:  /example/bids_eeg
 
-- name:  Preparing the combined MEG/fMRI MOUS dataset for sharing in BIDS
+- name:  Converting the combined MEG/fMRI MOUS dataset for sharing in BIDS
   link:  /example/bids_mous
 
 - name:  How should I specify the coordinate systems in a BIDS dataset?
   link:  /faq/bids_coordsystem
 
-- name:  Convert sedation EEG dataset to BIDS
+- name:  Convert the EEG sedation dataset for sharing in BIDS
   link:  /workshop/madrid2019/bids_sedation
 
