--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -10,10 +10,10 @@
 - name:  Apply clusterrandanalysis on TFRs of power that were computed with BESA
   link:  /example/apply_clusterrandanalysis_on_tfrs_of_power_that_were_computed_with_besa
 
-- name:  Preparing an EEG dataset for sharing
+- name:  Converting an example EEG dataset for sharing in BIDS
   link:  /example/bids_eeg
 
-- name:  Preparing the combined MEG/fMRI MOUS dataset for sharing in BIDS
+- name:  Converting the combined MEG/fMRI MOUS dataset for sharing in BIDS
   link:  /example/bids_mous
 
 - name:  Example analysis pipeline for Biosemi data
