--- a/_data/tag/sharing.yml
+++ b/_data/tag/sharing.yml
@@ -1,10 +1,10 @@
 - name:  BIDS - the brain imaging data structure
   link:  /example/bids
 
-- name:  Preparing an EEG dataset for sharing
+- name:  Converting an example EEG dataset for sharing in BIDS
   link:  /example/bids_eeg
 
-- name:  Preparing the combined MEG/fMRI MOUS dataset for sharing in BIDS
+- name:  Converting the combined MEG/fMRI MOUS dataset for sharing in BIDS
   link:  /example/bids_mous
 
 - name:  How should I specify the coordinate systems in a BIDS dataset?
