--- a/_data/tag/oslo2019.yml
+++ b/_data/tag/oslo2019.yml
@@ -13,3 +13,6 @@
 - name:  Statistical analysis and multiple comparison correction for EEG data
   link:  /workshop/oslo2019/statistics
 
+- name:  Time-frequency analysis of EEG data
+  link:  /workshop/oslo2019/timefrequency
+
