--- a/_data/tag/frequency.yml
+++ b/_data/tag/frequency.yml
@@ -1,3 +1,6 @@
 - name:  Time-frequency analysis of combined MEG/EEG data
   link:  /workshop/natmeg/timefrequency
 
+- name:  Time-frequency analysis of EEG data
+  link:  /workshop/oslo2019/timefrequency
+
