--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -46,6 +46,12 @@
 - name:  How can I merge two datasets that were acquired simultaneously with different amplifiers?
   link:  /faq/how_can_i_merge_two_datasets_that_were_acquired_simultaneously_with_different_amplifiers
 
+- name:  How can I use OpenMEEG for forward modeling?
+  link:  /faq/how_can_i_use_openmeeg_for_forward_modelling
+
+- name:  How do I install the OpenMEEG binaries
+  link:  /faq/how_do_i_install_the_openmeeg_binaries
+
 - name:  How is the segmentation defined?
   link:  /faq/how_is_the_segmentation_defined
 
@@ -198,6 +204,9 @@
 
 - name:  Time-frequency analysis of combined MEG/EEG data
   link:  /workshop/natmeg/timefrequency
+
+- name:  FieldTrip workshop in Oslo
+  link:  /workshop/oslo2019
 
 - name:  Forward modeling for EEG source reconstruction
   link:  /workshop/oslo2019/forward_modeling
