--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -247,6 +247,9 @@
 - name:  How do I construct a layout file for the plotting functions?
   link:  /faq/how_do_i_construct_a_layout_file_for_the_plotting_functions
 
+- name:  How do I install the OpenMEEG binaries
+  link:  /faq/how_do_i_install_the_openmeeg_binaries
+
 - name:  How do I prevent FieldTrip from printing the time and memory after each function call?
   link:  /faq/how_do_i_prevent_fieldtrip_from_printing_the_time_and_memory_after_each_function_call
 
