--- a/_data/tag/headmodel.yml
+++ b/_data/tag/headmodel.yml
@@ -40,6 +40,12 @@
 - name:  How can I visualize a localspheres volume conductor model?
   link:  /faq/how_can_i_visualize_a_localspheres_volume_conductor_model
 
+- name:  How can I visualize the different geometrical objects that are needed for forward and inverse computations?
+  link:  /faq/how_can_i_visualize_the_different_geometrical_objects_that_are_needed_for_forward_and_inverse_computations
+
+- name:  How do I install the OpenMEEG binaries
+  link:  /faq/how_do_i_install_the_openmeeg_binaries
+
 - name:  How is the segmentation defined?
   link:  /faq/how_is_the_segmentation_defined
 
@@ -75,4 +81,7 @@
 
 - name:  Source reconstruction of event-related fields using minimum-norm estimation
   link:  /tutorial/minimumnormestimate
+
+- name:  Forward modeling for EEG source reconstruction
+  link:  /workshop/oslo2019/forward_modeling
 
