--- a/_data/tag/development.yml
+++ b/_data/tag/development.yml
@@ -28,7 +28,7 @@
 - name:  Guidelines for audio and video material
   link:  /development/guideline/video
 
-- name:  Website syntax and formatting Event related averaging and MEG planar gradient
+- name:  Website syntax and formatting Website syntax and formatting
   link:  /development/guideline/website
 
 - name:  Meetings
