--- a/_data/tag/website.yml
+++ b/_data/tag/website.yml
@@ -1,3 +1,3 @@
-- name:  Website syntax and formatting Event related averaging and MEG planar gradient
+- name:  Website syntax and formatting Website syntax and formatting
   link:  /development/guideline/website
 
