--- a/_data/tag/beamforming.yml
+++ b/_data/tag/beamforming.yml
@@ -4,3 +4,6 @@
 - name:  Beamforming oscillatory responses in combined MEG/EEG data
   link:  /workshop/natmeg/beamforming
 
+- name:  Beamforming oscillatory responses in MEG data
+  link:  /workshop/oslo2019/beamforming
+
