--- a/_data/tag/meg-audodd.yml
+++ b/_data/tag/meg-audodd.yml
@@ -28,3 +28,6 @@
 - name:  Time-frequency analysis of combined MEG/EEG data
   link:  /workshop/natmeg/timefrequency
 
+- name:  Beamforming oscillatory responses in MEG data
+  link:  /workshop/oslo2019/beamforming
+
