--- a/_data/tag/source.yml
+++ b/_data/tag/source.yml
@@ -145,3 +145,6 @@
 - name:  Creating a sourcemodel for source-reconstruction of MEG or EEG data
   link:  /tutorial/sourcemodel
 
+- name:  Beamforming oscillatory responses in MEG data
+  link:  /workshop/oslo2019/beamforming
+
