--- a/_data/tag/4d.yml
+++ b/_data/tag/4d.yml
@@ -1,6 +1,6 @@
 - name:  MEG dataformats
   link:  /dataformat/meg
 
-- name:  Getting started with 4D-neuroimaging/BTi data
+- name:  Getting started with BTi/4D data
   link:  /getting_started/bti
 
