--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -64,7 +64,7 @@
 - name:  Getting started with BabySQUID data
   link:  /getting_started/babysquid
 
-- name:  Getting started with 4D-neuroimaging/BTi data
+- name:  Getting started with BTi/4D data
   link:  /getting_started/bti
 
 - name:  Getting started with CTF data
