made naming of MEG systems more consistent

--- a/_data/tag/data.yml
+++ b/_data/tag/data.yml
@@ -103,7 +103,7 @@
 - name:  Getting started with the Neuralynx data recorded at the Donders Institute
   link:  /getting_started/neuralynx_fcdc
 
-- name:  Getting started with Elekta/Neuromag data
+- name:  Getting started with Neuromag/Elekta data
   link:  /getting_started/neuromag
 
 - name:  Getting started with Plexon data
