--- a/_data/tag/elekta.yml
+++ b/_data/tag/elekta.yml
@@ -4,6 +4,6 @@
 - name:  Find the orientation of planar gradiometers
   link:  /example/planar_orientation
 
-- name:  Getting started with Elekta/Neuromag data
+- name:  Getting started with Neuromag/Elekta data
   link:  /getting_started/neuromag
 
