--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -1,11 +1,23 @@
+- name:  Getting started with real-time analysis for BCI/neurofeedback
+  link:  /getting_started/realtime
+
 - name:  Example script for leadfield based on FEM headmodel
   link:  /development/project/example_fem
+
+- name:  Fourier analysis of neuronal oscillations and synchronization
+  link:  /tutorial/fourier
 
 - name:  Example MATLAB scripts
   link:  /example
 
+- name:  Making a memory efficient analysis script
+  link:  /tutorial/memory
+
 - name:  Align EEG electrode positions to BEM headmodel
   link:  /example/align_eeg_electrode_positions_to_bem_headmodel
+
+- name:  Creating a clean analysis script
+  link:  /tutorial/scripting
 
 - name:  Apply clusterrandanalysis on TFRs of power that were computed with BESA
   link:  /example/apply_clusterrandanalysis_on_tfrs_of_power_that_were_computed_with_besa
