--- a/_data/tag/realtime.yml
+++ b/_data/tag/realtime.yml
@@ -1,11 +1,26 @@
+- name:  How fast is the FieldTrip buffer for realtime data streaming?
+  link:  /faq/how_fast_is_the_fieldtrip_buffer_for_realtime_data_streaming
+
 - name:  Real-time access to neurophysiological data
   link:  /development/realtime
 
+- name:  How should I get started with the FieldTrip realtime buffer?
+  link:  /faq/how_should_i_get_started_with_the_fieldtrip_realtime_buffer
+
+- name:  Getting started with real-time analysis for BCI/neurofeedback
 - name:  Streaming realtime EEG data to and from Arduino
+  link:  /getting_started/realtime
   link:  /development/realtime/arduino
 
+
 - name:  Artinis Medical Systems
+- name:  Getting started with real-time head localization in MEG
   link:  /development/realtime/artinis
+  link:  /getting_started/realtime_headlocalizer
+
+
+- name:  Realtime MEG BCI hands-on session in Nijmegen
+  link:  /workshop/realtime
 
 - name:  Soundcard input using PortAudio
   link:  /development/realtime/audio2ft
