--- a/_data/tag/ct.yml
+++ b/_data/tag/ct.yml
@@ -4,6 +4,9 @@
 - name:  CTF
   link:  /development/realtime/ctf
 
+- name:  Conditional Granger causality in the frequency domain
+  link:  /example/connectivity_conditional_granger
+
 - name:  Fit a dipole to the tactile ERF after mechanical stimulation
   link:  /example/fit_a_dipole_to_the_tactile_erf_after_mechanical_stimulation
 
