--- a/_data/tag/freq.yml
+++ b/_data/tag/freq.yml
@@ -7,6 +7,9 @@
 - name:  Common filters in beamforming
   link:  /example/common_filters_in_beamforming
 
+- name:  Conditional Granger causality in the frequency domain
+  link:  /example/connectivity_conditional_granger
+
 - name:  Correlation analysis in fMRI data
   link:  /example/correlation_analysis_in_fmri_data
 
