--- a/_data/tag/dataformat.yml
+++ b/_data/tag/dataformat.yml
@@ -79,6 +79,9 @@
 - name:  Getting started with Neuromag/Elekta/Megin data
   link:  /getting_started/neuromag
 
+- name:  Getting started with Nicolet data
+  link:  /getting_started/nicolet
+
 - name:  Getting started with Plexon data
   link:  /getting_started/plexon
 
