--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -94,6 +94,9 @@
 - name:  Human ECoG
   link:  /getting_started/human_ecog
 
+- name:  Getting started with Nicolet data
+  link:  /getting_started/nicolet
+
 - name:  Importing your data
   link:  /reading_data
 
