--- a/_data/tag/source.yml
+++ b/_data/tag/source.yml
@@ -91,6 +91,9 @@
 - name:  Is it important to have accurate measurements of electrode locations for EEG source reconstruction?
   link:  /faq/is_it_important_to_have_accurate_measurements_of_electrode_locations_for_eeg_source_reconstruction
 
+- name:  Source space is deformed or wrongly aligned after warping template
+  link:  /faq/source_space_is_deformed_or_wrongly_aligned_after_warping_template
+
 - name:  What is the conductivity of the brain, CSF, skull and skin tissue?
   link:  /faq/what_is_the_conductivity_of_the_brain_csf_skull_and_skin_tissue
 
