--- a/_data/tag/preprocessing.yml
+++ b/_data/tag/preprocessing.yml
@@ -67,6 +67,9 @@
 - name:  Reading is slow, can I write my raw data to a more efficient file format?
   link:  /faq/reading_is_slow_can_i_write_my_raw_data_to_a_more_efficient_file_format
 
+- name:  Source space is deformed or wrongly aligned after warping template
+  link:  /faq/source_space_is_deformed_or_wrongly_aligned_after_warping_template
+
 - name:  How can I check or decipher the sequence of triggers in my data?
   link:  /faq/triggers
 
