--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -394,9 +394,6 @@
 - name:  Should I add FieldTrip with all subdirectories to my MATLAB path?
   link:  /faq/should_i_add_fieldtrip_with_all_subdirectories_to_my_matlab_path
 
-- name:  Source space is deformed or wrongly aligned after warping template
-  link:  /faq/why_is_the_source_model_deformed_or_incorrectly_aligned_after_warping_template
-
 - name:  Should I use a Polhemus or a Structure Sensor to record electrode positions?
   link:  /faq/structuresensor
 
@@ -537,6 +534,9 @@
 
 - name:  Why is my message rejected from the email discussion list?
   link:  /faq/why_is_my_message_rejected_from_the_email_discussion_list
+
+- name:  Why is the source model deformed or incorrectly aligned after warping template?
+  link:  /faq/why_is_the_source_model_deformed_or_incorrectly_aligned_after_warping_template
 
 - name:  Why is there a residual 50Hz line-noise component after applying a DFT filter?
   link:  /faq/why_is_there_a_residual_50hz_line-noise_component_after_applying_a_dft_filter
