--- a/_data/tag/source.yml
+++ b/_data/tag/source.yml
@@ -91,9 +91,6 @@
 - name:  Is it important to have accurate measurements of electrode locations for EEG source reconstruction?
   link:  /faq/is_it_important_to_have_accurate_measurements_of_electrode_locations_for_eeg_source_reconstruction
 
-- name:  Source space is deformed or wrongly aligned after warping template
-  link:  /faq/why_is_the_source_model_deformed_or_incorrectly_aligned_after_warping_template
-
 - name:  What is the conductivity of the brain, CSF, skull and skin tissue?
   link:  /faq/what_is_the_conductivity_of_the_brain_csf_skull_and_skin_tissue
 
@@ -102,6 +99,9 @@
 
 - name:  Where can I find the dipoli command-line executable?
   link:  /faq/where_can_i_find_the_dipoli_command-line_executable
+
+- name:  Why is the source model deformed or incorrectly aligned after warping template?
+  link:  /faq/why_is_the_source_model_deformed_or_incorrectly_aligned_after_warping_template
 
 - name:  Why is there a rim around the brain for which the source reconstruction is not computed?
   link:  /faq/why_is_there_a_rim_around_the_brain_for_which_the_source_reconstruction_is_not_computed
