--- a/_data/tag/sourcemodel.yml
+++ b/_data/tag/sourcemodel.yml
@@ -1,3 +1,6 @@
+- name:  Why is the source model deformed or incorrectly aligned after warping template?
+  link:  /faq/why_is_the_source_model_deformed_or_incorrectly_aligned_after_warping_template
+
 - name:  Template models for source reconstruction
   link:  /template/sourcemodel
 
