--- a/_data/tag/granger.yml
+++ b/_data/tag/granger.yml
@@ -1,3 +1,6 @@
+- name:  Conditional Granger causality in the frequency domain
+  link:  /example/connectivity_conditional_granger
+
 - name:  Analysis of sensor- and source-level connectivity
   link:  /tutorial/connectivity
 
