--- a/_data/tag/meg-epilepsy.yml
+++ b/_data/tag/meg-epilepsy.yml
@@ -1,6 +1,12 @@
 - name:  Which datasets are used in the documentation and where are they used?
   link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
+- name:  Virtual channel analysis of epilepsy MEG data - Case 1
+  link:  /tutorial/case1
+
+- name:  Virtual channel analysis of epilepsy MEG data - Case 2
+  link:  /tutorial/case2
+
 - name:  Virtual channel analysis of epilepsy MEG data
   link:  /tutorial/epilepsy
 
