--- a/_data/tag/emg.yml
+++ b/_data/tag/emg.yml
@@ -1,3 +1,6 @@
+- name:  Converting an example EMG dataset for sharing in BIDS
+  link:  /example/bids_emg
+
 - name:  Detect the muscle activity in an EMG channel and use that as trial definition
   link:  /example/detect_the_muscle_activity_in_an_emg_channel_and_use_that_as_trial_definition
 
