--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -10,11 +10,23 @@
 - name:  Apply clusterrandanalysis on TFRs of power that were computed with BESA
   link:  /example/apply_clusterrandanalysis_on_tfrs_of_power_that_were_computed_with_besa
 
+- name:  Converting an example behavioral dataset for sharing in BIDS
+  link:  /example/bids_behavioral
+
 - name:  Converting an example EEG dataset for sharing in BIDS
   link:  /example/bids_eeg
 
+- name:  Converting an example EMG dataset for sharing in BIDS
+  link:  /example/bids_emg
+
+- name:  Converting an example eyetracker dataset for sharing in BIDS
+  link:  /example/bids_eyetracker
+
 - name:  Converting the combined MEG/fMRI MOUS dataset for sharing in BIDS
   link:  /example/bids_mous
+
+- name:  Converting an example video dataset for sharing in BIDS
+  link:  /example/bids_video
 
 - name:  Example analysis pipeline for Biosemi data
   link:  /example/biosemi
