--- a/_data/tag/example.yml
+++ b/_data/tag/example.yml
@@ -22,6 +22,9 @@
 - name:  Converting an example eyetracker dataset for sharing in BIDS
   link:  /example/bids_eyetracker
 
+- name:  Converting an example motion tracking dataset for sharing in BIDS
+  link:  /example/bids_motion
+
 - name:  Converting the combined MEG/fMRI MOUS dataset for sharing in BIDS
   link:  /example/bids_mous
 
